--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -30,7 +30,7 @@
         <div class="large-12 large-text-center columns">
             <label>How many will be attending?</label>
             <label>
-                <input class="inline" type="number" ng-model="main.weddingContact.attendingNumber" value="Yes"/>
+                <input class="inline" type="number" ng-model="main.weddingContact.attendingNumber" value="1"/>
             </label>
         </div>
     </div>
